--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ValuteCourse</string>
+    <string name="search">search</string>
+    <string name="gel_course">GEL Course</string>
+    <string name="statusimage">statusImage</string>
+    <string name="logo">logo</string>
 </resources>
